--- a/content/post/2020-10-12-finding-the-dimensions-of-secdatabase-com-from-2010-2020.Rmd
+++ b/content/post/2020-10-12-finding-the-dimensions-of-secdatabase-com-from-2010-2020.Rmd
@@ -82,7 +82,7 @@ We would also like to warn in advance that this post will include a lot of cod o
 
 # Hierarchial Taxonomy of XBRL in `secdatabase.com`
 
-From an investor's perspective, the most challenging thing about XBRL is learning the taxonomy to be able to extract the desired financial statement elements from deeply nested structures. We are going to do our best to lay it out succinctly, but it is likely that there will be inaccuracies. [The XBRL Book](http://ghislainfourny.github.io/the-xbrl-book/) tries to argue that everything we find to be complicated about XBRL are misconceptions, but after our deep dive, we respectfully disagree. We relied on The XBRL Book for much of the information about XBRL, and a lot of responses from the `secdatabase.com` team about their database.
+From an investor's perspective, the most challenging thing about XBRL is learning the taxonomy to be able to extract the desired financial statement elements from deeply nested structures. We are going to do our best to lay it out succinctly, but it is likely that there will be inaccuracies. We relied on [The XBRL Book](http://ghislainfourny.github.io/the-xbrl-book/) for much of the information about XBRL, and a lot of responses from the `secdatabase.com` team about their database. The XBRL Book argues that everything we find to be complicated about XBRL are misconceptions, but after our deep dive, we respectfully disagree. 
 
 The root of XBRL data elements are called *facts*, which are recorded as string or numeric values, represented by a series of *aspects* (*concept*, *period*, *entity* and *unit*) within a *context*. Within `secdatabase.com`, *facts* are stored in three "data_point" tables, with the most important being "data_point_snapshot" (which shows the most current value after any revisions). As we showed in the last posts, all the "entities" (identified by "cik" or "company_name" fields in `secdatabase.com`) and all their filings (ie: 10-K's, etc.) are tracked in the "company_submission" table. The combination of two or more *aspects*, called a "collision", can uniquely specify the coordinates of a particular value or group of values (*facts*) within a *context* to be displayed in the presentation of a particular *entity*. Within `secdatabase.com`, this always involves joining two or more tables together, usually on at least the accession_number_int field.
 
