--- a/content/post/2020-10-27-tapping-yelp-data-with-apache-drill-from-mac-using-sergeant/index.Rmd
+++ b/content/post/2020-10-27-tapping-yelp-data-with-apache-drill-from-mac-using-sergeant/index.Rmd
@@ -5,10 +5,16 @@ date: '2020-10-27'
 slug: tapping-yelp-data-with-apache-drill-from-mac-using-sergeant
 categories: ["R", "Code-Oriented", "SQL"]
 tags: ["Apache Drill", "Java"]
-draft: true
 ---
 
-```{r 'set-up', message=FALSE, warning=FALSE, include=FALSE}
+
+```{r 'yelp', echo=FALSE, message=FALSE, warning=FALSE, screenshot.opts = list(delay = 10), out.height='100%'}
+knitr::include_url("https://www.yelp.com/dataset")
+```
+
+
+<details><summary>Click to see package details</summary>
+```{r 'set-up', error=FALSE, message=FALSE, warning=FALSE}
 
 # Libraries
 packages <- 
@@ -30,13 +36,10 @@ knitr::opts_chunk$set(
   out.width = '100%'
 )
 
-
+options(blogdown.server.timeout = 60) 
 ```
 
-
-```{r 'yelp', echo=FALSE, message=FALSE, warning=FALSE, screenshot.opts = list(delay = 10)}
-knitr::include_url("https://www.yelp.com/dataset")
-```
+</details>
 
 
 # Introduction
@@ -48,10 +51,10 @@ Recall in [Finding the Dimensions of `secdatabase.com` from 2010-2020 - Part 2](
 
 # Yelp Academic Data Set
 
-We were hoping to avoid downloading it, but then we found Bob Rudis' excellent [Analyzing the Yelp Academic Dataset w/Drill & sergeant](https://rud.is/rpubs/yelp.html) blog post and became intrigued by the possibility of having a connection which was so flexible about storage and data formats, and here we are. The Yelp Academic data set is about 10GB in size and took us over an hour to download, and are summarized in the image from the web page above. We hoped that we might be able to use it to explore the death rate of businesses in areas with differing COVID-19 mask and other non pharmaceutical interventions. Unfortunately, this is not possible at the moment, because it only runs through the end of last year. The files are all in JSON format, and were one of the original examples given on the Apache Drill website, and also, with the {sergeant} package. The business file is the smallest, and the reviews are by far the largest. Users visit businesses and give reviews, check-ins or tips, so the two main identifiers which tie the tables together are business_id and the user_id.
+We were hoping to avoid downloading it, but then we found Bob Rudis' excellent [Analyzing the Yelp Academic Dataset w/Drill & sergeant](https://rud.is/rpubs/yelp.html) blog post and became intrigued by the possibility of having the flexible connection it offered, agnostic about storage and data formats. The Yelp Academic data set is about 10GB in size and took us over an hour to download, and are summarized in the image from the web page above. We hoped that we might be able to use it to explore the death rate of businesses in areas with differing COVID-19 mask and other non pharmaceutical interventions. Unfortunately, this is not possible at the moment, because it only runs through the end of 2019. The files are all in JSON format, and were one of the original examples given on the Apache Drill website and with the {sergeant} package. Shown below, the "business" file is the smallest, and "reviews" are by far the largest. Users visit businesses and give reviews, check-ins or tips, so the two main identifiers which tie the tables together are business_id and the user_id. There is a lot of opportunity to practice joins and aggregations if you can get it to work.
 
-
-```{r 'yelp-dataset', echo=FALSE, message=FALSE, warning=FALSE}
+<details><summary>Click to see code generating output</summary>
+```{r 'yelp-dataset', message=FALSE, warning=FALSE, error=FALSE}
 d <-
   file.info(
     list.files(
@@ -62,6 +65,11 @@ d <-
   )[c(1, 2)]
 data.frame(file = stringr::str_extract(rownames(d), "yelp.*"), size = d$size)
 ```
+</details>
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+data.frame(file = stringr::str_extract(rownames(d), "yelp.*"), size = d$size)
+```
+
 
 
 # Background on Drill
@@ -70,18 +78,18 @@ To quote from this guide: [Apache Drill - Quick Guide](https://www.tutorialspoin
 
 *Apache Drill is a low latency schema-free query engine for big data. Drill uses a JSON document model internally which allows it to query data of any structure. Drill works with a variety of non-relational data stores, including Hadoop, NoSQL databases (MongoDB, HBase) and cloud storage like Amazon S3, Azure Blob Storage, etc. Users can query the data using a standard SQL and BI Tools, which doesn’t require to create and manage schemas.*
 
-If this could work, it feels like we could fire it up and use it in just about any source or data type. In this post, we are just going to use with a single node as we are only working with one small computer, but it looks like it should be easy to add additional nodes to speed things up.
+If this could work, it feels like we could fire it up and use it in just about any of our data sources or types. In this post, we are just going to use with a single node as we are only working with one small computer, but it looks like it should be easy to add additional nodes to speed things up.
 
 # Sergeant
 
-As usual, none of this would have been possible without an amazing package created and shared by a real developer, often in their free time. In this case, we relied on Bob Rudis' Drill `{sergeant}` package, blog posts and bookdown manual [Drill in More than 10 Minutes](https://rud.is/books/drill-sergeant-rstats/drill-in-more-than-10-minutes.html). He explains that he set up the interface because he saw Drill as a streamlined alternative to SPARK for those not needing the ML components (ie: just needing to query large data sources of disparate types like json, csv, parquet  and rdbms) The package allows to connect to Drill via `dplyr` interface with the `src_drill()` function, and also the REST API with `drill_connection()`. Before using `{sergeant}` though, Java, Drill and Zookeeper must be installed.
+As usual, none of this would have been possible without an amazing open source package created and shared by a real developer, often in their free time. In this case, we relied on Bob Rudis' (Drill) `{sergeant}` package, blog posts and bookdown manual [Drill in More than 10 Minutes](https://rud.is/books/drill-sergeant-rstats/drill-in-more-than-10-minutes.html). He explains that he set up the interface because he saw Drill as a streamlined alternative to SPARK for those not needing the ML components (ie: just needing to query large data sources of disparate types like json, csv, parquet and rdbms) The package allows to connect to Drill via `dplyr` interface with the `src_drill()` function, and also the REST API with `drill_connection()`. Before using `{sergeant}` though, Java, Drill and Zookeeper must be installed.
 
 # Java
 
 Drill requires Oracle JDK 1.8, which is several generations earlier than the version we currently have installed on our Mac. In our first year or two, we tangled with Java because we really wanted to use `{tabulizer}` to extract tables from pdfs. We burned a lot of time trying to understand the versions and how to install and point to them on Stack Overflow. Just last week, we saw a post looking for advice on loading the `{xlsx}` package, which depends on Java, as well. One of the magical discoveries we made was [Java Environment](https://www.jenv.be). Go to [Java SE Development Kit 8 Downloads](https://www.oracle.com/java/technologies/javase/javase-jdk8-downloads.html), choose the latest Mac Version of 1.8, and install the .dmg. Then on a Mac, `brew install jenv`, and it is off to the races. Here we show the Java versions on our machine from the Terminal. 
 
 
-```{bash}
+```{bash 'jenv-versions-start'}
 jenv versions
 ```
 
@@ -93,20 +101,21 @@ jenv global 1.8
 
 And we are good to go, plus we can easily switch back when we are done. It is hard to understate how grateful we are to people who built `jenv` and `brew`. 
 
-```{bash 'jenv-version'}
+```{bash 'jenv-version-set'}
 jenv version
 ```
 
 
+
 # Setting up Apache Drill
 
-The latest version (December 2019) can be downloaded from [here](http://apache.mirrors.hoobly.com/drill/drill-1.17.0/apache-drill-1.17.0.tar.gz), but note with the sale of MapR to HPE last year, the project is reported to been "orphaned". We took the download and install route, though we subsequently found that using `brew install apache-drill` might have avoided some of the questions we now have. We currently have it installed at `/usr/local/apache-drill-1.1.7.0/` (shown below). The `{sergeant}` manual says to have drill in `usr/local/drill/`, and to symlink to the full versioned `drill` to make it easier to upgrade. We noticed that we have a separate folder (`~/drill/`) in our home directory which has a file `udf/` file from the installation, which we understand pertains to "user defined functions". We weren't sure exactly which folder was referred to and reading on Stack Overflow, but we were about three steps away from understanding how this all worked. The `{sergeant}` manual also talked about allocating more memory, but we didn't know how to do this or if it was possible on our small system. There were also other options for setting up a Drill connection, like Docker, so maybe that would help us resolve our issues. It could be that these factors are why we haven't gotten it to work as well as we hoped. 
+The latest version (December 2019) can be downloaded from [here](http://apache.mirrors.hoobly.com/drill/drill-1.17.0/apache-drill-1.17.0.tar.gz), but note with the sale of MapR to Hewlett Packard last year, the project is reported to have been "orphaned". We took the download and install route, though we subsequently found that using `brew install apache-drill` might have avoided some of the questions we now have about symlinking (see Zookeeper section below). We currently have it installed at `/usr/local/apache-drill-1.1.7.0/` (shown below). 
 
 ```{bash 'drill-dir'}
 ls /usr/local/apache-drill-1.17.0/bin
 ```
 
-Here there are a few options. Running `bin/drill-embedded` from this this folder, a SQL engine comes up, and queries can be run straight from the command line from a basic UI. We wanted to query from RStudio, so we had another step or two. First, we had to configure the `drill-override.conf` file in the /`conf/` folder above. We followed Bob Rudis' [instructions](https://rud.is/books/drill-sergeant-rstats/drill-in-more-than-10-minutes.html#drill-storage-plugins) and named our cluster_id "drillbit1" and zk.connect to our local path as shown below. After these steps, we are able to run and show some sample queries using Drill.
+Here there are a few options for running Drill. Running `bin/drill-embedded` from this this folder, a SQL engine comes up, and queries can be run straight from the command line from a basic UI. We wanted to query from RStudio, so we had another step or two. First, we had to configure the `drill-override.conf` file in the /`conf/` folder above. We followed Bob Rudis' [instructions](https://rud.is/books/drill-sergeant-rstats/drill-in-more-than-10-minutes.html#drill-storage-plugins) and named our cluster_id "drillbit1" and zk.connect to our local path as shown below. After these steps, we are able to run and show some sample queries using Drill.
 
 
 ```{bash 'drill-override'}
@@ -127,9 +136,12 @@ We actually ran it separately in the background from Terminal. Below, we are abl
 /usr/local/apache-drill-1.17.0/bin/drillbit.sh status
 ```
 
+The `{sergeant}` manual also talked about allocating more memory, but we didn't know how to do this or if it was possible on our small system. There were also other options for setting up a Drill connection, like Docker, so maybe that would help us resolve our issues. It could be that these factors are why we haven't gotten it to work as well as we hoped.
+
 # Zookeeper
 
-There is another option to run Drill in parallel using Zookeeper. We did install Zookeeper according to the `{sergeant}` instructions, but when we used this with an ODBC connection, did not notice any difference when we pointed to it in the `/conf/` file. This may be where we fell short. 
+There is also the option to run Drill in parallel using Zookeeper discussed in the `{sergeant}` manual. In the *Wiring Up Zookeeper* section, it says to have drill in `usr/local/drill/` for Mac, and to symlink to the full versioned `drill` to make it easier to upgrade, but it was vague about this. We noticed that we have a separate folder (`~/drill/`) in our home directory which has a file `udf/` file from the installation, which we understand pertains to "user defined functions" (a subject touched on in Recipe 11 of the `{sergeant}` manual). We weren't sure exactly which folder was referred to and reading on Stack Overflow, but we were about three steps away from understanding how this all fit together, so our configuration may not be optimal. When we used Zookeeper with the ODBC connection in parallel instead of "Direct to "Drillbit", if anything, we got slower query times as we will discuss below.
+
 
 # Configuring the Drill Path Storage Plug-in
 
@@ -141,15 +153,15 @@ Drill is connected to data sources via [storage plug-ins](https://drill.apache.o
 /usr/local/apache-drill-1.17.0/bin/drill-localhost
 ```
 
-In his Yelp blog post, Bob Rudis used "root.dfs" as the path to tables. At first, we didn't understand what this referred to, but it is used as the path to the root of the file system where the data is stored as configured in the storage plug-ins. The "Storage" page of the Drill Web App is shown below. Both his and the Apache documentation also refer the "cp" path to refer to example JAR data in the Drill "classpath". In addition to the two defaults, all the plug-ins available for hive, mongo, s3, kafka, etc. are also shown below. 
+In his Yelp blog post, Bob Rudis used "root.dfs" as the path to the Yelp tables. At first, we didn't understand what this referred to, but it is used as the path to the root of the file system where the data is stored as configured in the storage plug-ins. The "Storage" page of the Drill Web App is in Figure \@ref(fig:storage). Both his and the Apache documentation also refer the "cp" path to refer to example JAR data in the Drill "classpath". In addition to the two defaults, all the plug-ins available for hive, mongo, s3, kafka, etc. are also shown below. 
 
-```{r 'storage', echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE, screenshot.opts = list(delay = 20)}
+```{r 'storage', echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE, screenshot.opts = list(delay = 20), fig.cap='Drill Web App Storage', out.height='100%'}
 knitr::include_url('http://localhost:8047/storage')
 ```
 
-By clicking on the "Update" button for "dfs", it is easy to modify the "workspace", "location" and "defaultInputFormat" with the path to the file with your data. In our case, we changed the name of workspace to "root", the location to "/Volumes/davidlucey/aDL/data/yelp_dataset/" and the defaultInputFormat to "json". All the different data types are shown further down in "formats", which is one of the big selling points. According to `{sergeant}`, it is possible to even combine disparate source types like: json, csv, parquet and rmdbs by modifying formats when configuring "dfs", while pointing to almost any distributed file system. Once a path is configured in the plug-in, the data in that folder is all set to be queried from RStudio.
+By clicking on the "Update" button for "dfs", it is easy to modify the "workspace", "location" and "defaultInputFormat" with the path to the file with your data as shown in Figure \@ref(fig:dfs). In our case, we changed the name of workspace to "root", the location to "/Volumes/davidlucey/aDL/data/yelp_dataset/" and the defaultInputFormat to "json". All the different data types are shown further down in "formats", which is one of the big selling points. According to `{sergeant}`, it is possible to even combine disparate source types like: json, csv, parquet and rmdbs by modifying formats when configuring "dfs", while pointing to almost any distributed file system. Once a path is configured in the plug-in, the data in that folder is all set to be queried from RStudio.
 
-```{r 'dfs', echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE, screenshot.opts = list(delay = 20)}
+```{r 'dfs', echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE, screenshot.opts = list(delay = 20), fig.cap='Drill Web App Storage DFS Panel', out.height='100%'}
 knitr::include_url('http://localhost:8047/storage/dfs')
 ```
 
@@ -159,52 +171,70 @@ knitr::include_url('http://localhost:8047/storage/dfs')
 The first and most basic option to connect given by `{sergeant}` was via `dplyr` through the REST API, which was simple using `src_drill()` mapped to "localhost" port 8047. The resulting object lists the tables, including "dfs.root" workspace, which we configured in the dfs storage page above to point to the folder where we stored the Yelp JSON files. Note that there is no connection object involved with this option, and `src_drill()` doesn't offer the option to specify much other than the host, port and user credentials.
 
 
-```{r 'src-drill'}
+```{r 'src-drill', echo=TRUE, message=FALSE, warning=FALSE}
 db <- src_drill("localhost")
 db
 ```
 
 Here we have loaded the key tables with the `tbl()` similar to [Analyzing the Yelp Academic Dataset w/Drill & sergeant](https://rud.is/rpubs/yelp.html). Note the prefix "dfs.root", followed by the name of the file from the specified Yelp Academic data set folder surrounded by back ticks. Our understanding is that `{sergeant}` uses `jsonlite::fromJSON()` to interact with the files while using the `dplyr` `tbl()` method to connect.
 
-
-```{r 'load-dplyr-tables', cache=TRUE}
+<details><summary>Click to see R code to set up check, yelp_biz, users & review `tbl()`</summary>
+```{r 'load-dplyr-tables', echo=TRUE, error=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
+tic.clearlog()
 tic("Loading the four key datasets with: ")
 check <- tbl(db, "dfs.root.`yelp_academic_dataset_checkin.json`")
 yelp_biz <-
   tbl(db, "dfs.root.`yelp_academic_dataset_business.json`")
 users <- tbl(db, "dfs.root.`yelp_academic_dataset_user.json`")
 review <- tbl(db, "dfs.root.`yelp_academic_dataset_review.json`")
-toc()
+toc(log = TRUE, quiet = TRUE)
+
 ```
+</details>
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+check
+yelp_biz
+users
+review
+tic.log(format = TRUE)
+```
+
 
 
 It takes about two minutes to skim `yelp_biz`, which seems too long for ~210k rows, and definitely not worth it with the other, much larger files. [Analyzing the Yelp Academic Dataset w/Drill & sergeant](https://rud.is/rpubs/yelp.html) didn't give the timing on its queries, but we assume it was much faster than this. The error message recommends that we `CAST` BIGINT columns to `VARCHAR` prior to working with them in `dplyr`, and suggests that we consider using R ODCBC with the MapR ODBC Driver because `jsonlite::fromJSON()` doesn't support 64-bit integers. So, we are going to give ODBC a try in the next section and will set up a query to try to take this message into account to see if that makes a difference.
 
-```{r 'skim-yelp-biz', echo=TRUE, cache=TRUE}
+
+<details><summary>Click to see R code to skim Yelp Business JSON</summary>
+```{r 'skim-yelp-biz', echo=TRUE, error=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
+tic.clearlog()
 tic("Time to skim: ")
-skimr::skim(yelp_biz)
-toc()
+skim <- skimr::skim(yelp_biz)
+toc(log = TRUE, quiet = TRUE)
+
+```
+</details>
+```{r 'skim-output', echo=FALSE, message=FALSE, warning=FALSE}
+skim
+tic.log(format = TRUE)
 ```
 
 
-```{r 'profiles', echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE, screenshot.opts = list(delay = 20)}
-knitr::include_url('http://localhost:8047/profiles')
-```
 
 # Setting up and Querying Drill with ODBC
 
 First we had to download and install the MapR Drill ODBC Driver, which wasn't difficult with the instructions [here](https://drill.apache.org/docs/installing-the-driver-on-mac-os-x/). 
 
 
-```{r 'mapr-driver', echo=FALSE, message=FALSE, warning=FALSE}
+```{r 'mapr-driver', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE}
 d <- odbc::odbcListDrivers()
 d[str_detect(d$name, "MapR") | str_detect(d$attribute, "MapR"),]
 ```
 
-Here was our connection using ODBC. Note that "ConnectionType" is specified as "Direct to Drillbit" [Wiring Up Drill and R ODBC Style](https://rud.is/books/drill-sergeant-rstats/wiring-up-drill-and-r-odbc-style.html). If we were going with Zookeeper, ConnectionType should be "Zookeeper" and "ZKQuorum" "localhost:2181" instead. Since we have Zookeeper installed, we also tried this, but didn't notice a big difference.
+Here was our connection using ODBC. Note that "ConnectionType" is specified as "Direct to Drillbit" [Wiring Up Drill and R ODBC Style](https://rud.is/books/drill-sergeant-rstats/wiring-up-drill-and-r-odbc-style.html). If we were going with Zookeeper, ConnectionType should be "Zookeeper" and "ZKQuorum" "localhost:2181" instead. Since we have Zookeeper installed, we also tried this, but didn't notice a big difference. When we run the ODBC connection below, the connection pain in RStudio shows four schemas ("c", "d", "i" and "s"), each having no tables. 
 
 
-```{r include=FALSE}
+<details><summary>Click to see R code to connect via ODBC</summary>
+```{r 'drill-con', echo=TRUE, error=FALSE, message=FALSE, warning=FALSE}
 DBI::dbConnect(
   odbc::odbc(),
   driver = "MapR Drill ODBC Driver",
@@ -215,13 +245,17 @@ DBI::dbConnect(
   ZkClusterID = "drillbits1",
   ZkQuorum = ""
 ) -> drill_con
-
+```
+</details>
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+drill_con
 ```
 
+After setting up the connection, the `{sergeant}` manual returned a message with the current Drill version, but ours showed a Drill version of "00.00.0000", so that might be part of to problem. We can see that connecting to the tables with ODBC took almost twice as long as with the `dplyr` connection, so it seems like we are doing something wrong. When we tried this with Zookeeper, it took 46 seconds, while as shown below, 36 seconds with "Direct to Drillbit".
 
-After setting up the connection, the `{sergeant}` manual returned a message with the current Drill version, but ours showed a Drill version of "00.00.0000", so that might be part of to problem. We can see that connecting to the tables with ODBC took almost twice as long as with the `dplyr` connection, so it seems like we are doing something wrong. 
 
-```{r 'load-odbc-tables', cache=TRUE}
+```{r 'load-odbc-tables', echo=TRUE, error=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
+tic.clearlog()
 tic("Loading the four key datasets with ODBC: ")
 check <-
   tbl(drill_con,
@@ -238,23 +272,41 @@ review <-
   tbl(drill_con,
       sql("SELECT * FROM dfs.root.`yelp_academic_dataset_review.json`"))
 toc()
+
 ```
 
 
-The `skim()` for yelp_biz took about the same amount of time, but either way, it was still way too long to be a viable alternative.
+The `skim()` for yelp_biz took about the same amount of time, but either way, it was still way too long to be a viable alternative. Again, "Direct to Drillbit" here took 68 seconds, while 81 seconds with Zookeeper, so we are clearly doing something wrong if all the things which are supposed to speed things up are actually slowing us down.
 
-
-```{r 'skim-yelp-biz-odbc', cache=TRUE}
+<details><summary>Click to see code to skim Yelp Business JSON with ODBC</summary>
+```{r 'skim-yelp-biz-odbc', echo=TRUE, error=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
+tic.clearlog()
 tic("Skim yelp-biz with ODBC")
-skimr::skim(yelp_biz)
-toc()
+skim <- skimr::skim(yelp_biz)
+toc(log = TRUE, quiet = TRUE)
+
 ```
+</details>
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+skim
+tic.log(format = TRUE)
+```
+
+
+# Drill Web App
+
+As we go along making queries, everything is collected in the Web App Profiles page, as shown in Figure \@ref(fig:profiles). Clicking on a query here takes us to the Query and Planning page, shown in Figure \@ref(fig:query-and-planning). There are other dashboards which we will show below.
+
+```{r 'profiles', echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE, screenshot.opts = list(delay = 20), fig.cap='Drill Web App Query Profiles', out.height='100%'}
+knitr::include_url('http://localhost:8047/profiles')
+```
+
 
 # Query Profiling with Drill
 
-The other really interesting thing in Drill was profiling. Here is a more complicated query we experimented with with a couple of joins and some aggregations for a query which wound up taking over an hour. See that we `CAST` the integer variables in this case as we were warned above, but that also didn't seem to make a difference. 
+The other really interesting thing in Drill was profiling. Here is a more complicated query we experimented with with a couple of joins and some aggregations for a query which wound up taking over an hour. See that we `CAST` the integer variables in this case as we were warned above, but that also didn't seem to make a difference. We are not running this here because it took over an hour to run, but the timing can be seen in Figure \@ref(fig:query-and-planning) further down at 1h11.
 
-```{r 'sql-query', echo=TRUE, message=FALSE, warning=FALSE, eval=FALSE}
+```{r 'sql-query', echo=TRUE, error=FALSE, message=FALSE, warning=FALSE, eval=FALSE}
 dq <-
   odbc::dbGetQuery(drill_con, 
     "SELECT b1.name
@@ -273,24 +325,24 @@ dq <-
       INNER JOIN dfs.root.`yelp_academic_dataset_business.json` b1
       ON c.business_id = b1.business_id"
       )
-
 ```
 
 
-It is amazing how much information about the query Drill gives us, shown in the frame below. Looking further down at the Operator Profiles, we can see that joining almost 10 million rows, twice, ate up over 70% of the query time. A couple of aggregations also cost almost 20%. The scan operators spent time waiting for data and some operators spilled to disc. Even without those, we still wouldn't have been satisfied with anywhere near this amount of time. Having this information, it seems like it would be possible to optimize, but we didn't know how to do it. We have been recently learning SQL and realize that there is still a lot to learn. 
+It is amazing how much information about the query Drill gives us, shown in the Figure \@ref(fig:query-and-planning). Clicking on the "Edit Query" tab, and scrolling down to Operator Profiles, we can see that our attempt at joining almost 10 million rows, twice, ate up over 70% of the query time. A couple of aggregations also cost almost 20%. The scan operators spent time waiting for data and some operators spilled to disc. Even without those bottlenecks, we probably still wouldn't have been satisfied with this amount of time. Having this information, it seems like it would be possible to optimize, but we didn't know how to do it. We have been recently learning SQL and realize that there is still a lot to learn. 
 
 
-```{r 'query-and-planning', echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE, screenshot.opts = list(delay = 20)}
+```{r 'query-and-planning', echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE, screenshot.opts = list(delay = 20), fig.cap='Drill Query and Planning Pane for More Complicated SQL Query', out.height='100%'}
 knitr::include_url('http://localhost:8047/profiles/20746009-dec6-a077-f88a-79071cac9b86')
 ```
 
 
-Lastly, Drill has a nice dashboard which allowed us to for example instruct the hash joins and hash aggregations to ignore memory limits. There were a lot of parameter settings available, but we were not sure how to adjust these to solve our specific problems, but would welcome any good advice or pointers.
+Lastly, Drill has a nice dashboard which allowed us to for example instruct the hash joins and hash aggregations to ignore memory limits as shown in Figure \@ref(fig:options). There were a lot of parameter settings available, but we were not sure how to adjust these to solve our specific problems, but would welcome any good advice or pointers.
 
 
-```{r 'options', echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE, screenshot.opts = list(delay = 20)}
+```{r 'options', echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE, screenshot.opts = list(delay = 20), fig.cap='Drill Web App Options', out.height='100%'}
 knitr::include_url('http://localhost:8047/options')
 ```
+
 
 # Clean up 
 
@@ -302,7 +354,7 @@ Shutting down when done is also easy as shown here.
 
 Returning to JDK 14.0
 
-```{bash 'fix-jenv', echo=TRUE, message=FALSE, warning=FALSE}
+```{bash 'jenv-return', echo=TRUE, message=FALSE, warning=FALSE}
 jenv global 14.0.2
 ```
 
@@ -310,5 +362,4 @@ jenv global 14.0.2
 # Conclusion
 
 We don't know the status of Drill given "orphan" status, but there wasn't much current discussion that we could find with a quick search. If these problems are fixable, we would be very grateful for feedback and promise to update this post for the benefit of others. If there is a clearly better open source way to accomplish these objectives, knowing that would also be very much appreciated.
-
 
