fixed hugo version

--- a/content/post/2021-02-03-introducing-the-redwall-irs-soi-tax-dashboard/index.Rmd
+++ b/content/post/2021-02-03-introducing-the-redwall-irs-soi-tax-dashboard/index.Rmd
@@ -47,4 +47,4 @@ The effects of the recent tax cuts can be seen in all income bands having lower 
 
 # Conclusion
 
-In an upcoming version, we hope to increase the size of the data by 10x to include types of income, credits and deductions. In the future, we would also like to add other variables such as real estate prices, transportation or education data. The next version of the app will have the ability to compare the trajectory of selected 1040 items by selected geographical units, and to view in aggregate or per capita. In order to allow flexibility to grow and change over time, we will use `{golem}` and AWS to host our app in a Docker container. We already have a working `{golem}` app ready to go in our local environment using the full data set, but managing the AWS environment and hosting will take more work. Should we built a separate database to host the data outside the app? Should we use Shiny Server on an EC2 machine or can we host Docker containers in ECS? We are excited about the many avenues to add to and learn from this project.
+In an upcoming version, we hope to increase the size of the data by 10x to include types of income, credits and deductions. We would also like to add other variables such as real estate prices, transportation or education data. The next version of the app will have the ability to compare the trajectory of selected 1040 items by selected geographical units, and to view in aggregate or per capita. In order to allow flexibility to grow and change over time, we will use `{golem}` and AWS to host our app in a Docker container. We already have a working `{golem}` app ready to go in our local environment using the full data set, but managing the AWS environment and hosting will take more work. Should we built a separate database to host the data outside the app? Should we use Shiny Server on an EC2 machine or can we host Docker containers in ECS? We are excited about the many avenues to add to and learn from this project.
