move image to static img folder

--- a/content/post/2021-02-03-introducing-the-redwall-irs-soi-tax-dashboard/index.Rmd
+++ b/content/post/2021-02-03-introducing-the-redwall-irs-soi-tax-dashboard/index.Rmd
@@ -7,7 +7,7 @@ categories: ["Nutmeg Project", "R"]
 tags: ["connecticut", "shiny", "dataviz", "income"]
 ---
 
-[![](images/irs_dash.png "IRS Tax Dashboard")](https://luceyda.shinyapps.io/irs_dash/)
+[![](/img/irs_dash.png "IRS Tax Dashboard")](https://luceyda.shinyapps.io/irs_dash/)
 
 # Introduction
 
