--- a/content/post/2021-03-06-using-census-of-govts-to-show-if-know-r-know-sql/index.Rmd
+++ b/content/post/2021-03-06-using-census-of-govts-to-show-if-know-r-know-sql/index.Rmd
@@ -35,7 +35,7 @@ knitr::opts_chunk$set(
 
 # Introduction
 
-We have been exploring Willamette University [Government Finance Database](https://willamette.edu/mba/research-impact/public-datasets/index.html), a cleaned up and aggregated version of 50 years of annual Census of Governments. For those interested in learning more, please see Willamette's paper [The Government Finance Database: A Common Resource for Quantitative Research in Public Financial Analysis](https://willamette.edu/mba/research-impact/public-datasets/index.html) describing the database and its creation. It is an amazing resource of 2.4 GB in .csv form, but with 500+ fields of nested levels of government entities and over 500 financial statement items, very complicated even after the extensive work Willamette have done to compile it. This is exactly the kind of less well known, but valuable longitudinal data, for which we have had the most interest. Our recent [Introducing the Redwall IRS SOI Tax Dashboard](https://redwallanalytics.com/2021/02/03/introducing-the-redwall-irs-soi-tax-dashboard/) describes our similar project with 15 years of detailed IRS tax data by zip code, and related new package `{irsSOI}` and {golem} Shiny app `{irsApp}`. We dug a bit into SQL in [Learning SQL and Exploring XBRL with secdatabase.com - Part 1](https://redwallanalytics.com/2020/09/10/learning-sql-and-exploring-xbrl-with-secdatabase-com-part-1/), but it took a long time to generate queries we felt confident in. In this post, we will describe how we can use the amazing `{dplyr}` SQL translation layer as a tool to quickly develop and explore with elaborate queries. This may also help us to find a durable solution of a back-end for our projects and apps with `{SQLite}` databases.
+We have been exploring Willamette University [Government Finance Database](https://willamette.edu/mba/research-impact/public-datasets/index.html), a cleaned up and aggregated version of 50 years of annual Census of Governments. For those interested in learning more, please see Willamette's paper [The Government Finance Database: A Common Resource for Quantitative Research in Public Financial Analysis](https://willamette.edu/mba/research-impact/public-datasets/index.html) describing the database and its creation. It is an amazing resource of 2.4 GB in .csv form, but with over 500 fields of financial statement items in nested levels of government entities, is very complicated even after the extensive work Willamette have done to compile it. This is exactly the kind of less well known, but valuable longitudinal data, for which we have had the most interest. Our recent [Introducing the Redwall IRS SOI Tax Dashboard](https://redwallanalytics.com/2021/02/03/introducing-the-redwall-irs-soi-tax-dashboard/) describes our similar project with 15 years of detailed IRS tax data by zip code, and related new package `{irsSOI}` and {golem} Shiny app `{irsApp}`. We dug a bit into SQL in [Learning SQL and Exploring XBRL with secdatabase.com - Part 1](https://redwallanalytics.com/2020/09/10/learning-sql-and-exploring-xbrl-with-secdatabase-com-part-1/), but it took a long time to generate queries we felt confident in. In this post, we will describe how we can use the amazing `{dplyr}` SQL translation layer as a tool to quickly develop and explore with elaborate queries. This may also help us to find a durable solution of a back-end for our projects and apps with `{SQLite}` databases.
 
 # Where This is Going
 
